Add heights to some SVGs

--- a/src/topics/gestalt-theory/index.mdx
+++ b/src/topics/gestalt-theory/index.mdx
@@ -375,7 +375,7 @@ We are able to alternate between multiple ambiguous interpretations; neither one
 
 <figure>
   <Panel fullHeight={false}>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 545.04 159.54" className="cube-illustration fill-current">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 545.04 159.54" className="cube-illustration fill-current w-full h-36">
       <rect className="line stroke-current fill-none" x="2.5" y="42.6" width="114.44" height="114.44"/>
       <rect className="line stroke-current fill-none" x="42.6" y="2.5" width="114.44" height="114.44"/>
       <line className="line stroke-current fill-none" x1="2.5" y1="42.6" x2="42.6" y2="2.5"/>
@@ -407,7 +407,7 @@ We can recognize objects even when they are rotated, scaled, stretched, lightly 
 
 <figure>
   <Panel fullHeight={false}>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 173.07 147.37" className="w-full">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 173.07 147.37" className="w-full h-64">
       <g className="fill-current text-grey-300 dark:text-grey-700">
         <path d="M41.34,82.78l0,0-4.56-2.48a1.12,1.12,0,0,0-.73-.13L1.48,85.05A1.7,1.7,0,0,0,.11,86.72L0,143.59a1.45,1.45,0,0,0,.17.7,1.29,1.29,0,0,0,.47.46l4.56,2.48h0a1.25,1.25,0,0,0,.75.14l34.61-4.87a1.71,1.71,0,0,0,1.37-1.67L42,84A1.26,1.26,0,0,0,41.34,82.78Z"/>
         <path d="M109,131.34l-36.34-3.82a2.14,2.14,0,0,1-1.76-1.11L58.52,89.28,55.63,97,68,134.13a2.13,2.13,0,0,0,1.75,1.12l36.35,3.82c.58.06,1-.12,1.12-.43l2.88-7.73C110,131.22,109.55,131.4,109,131.34Z"/>
@@ -479,7 +479,7 @@ Nearby objects are perceptually grouped together. Space between objects (and gro
 
 <figure>
   <Panel>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.2 139.69" className="w-full fill-current">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.2 139.69" className="w-full fill-current h-64">
       <circle cx="8.04" cy="8.04" r="8.04"/>
       <circle cx="29.46" cy="8.04" r="8.04"/>
       <circle cx="50.89" cy="8.04" r="8.04"/>
@@ -584,7 +584,7 @@ Elements that are similar are grouped together. You can build similiarity with s
 
 <figure>
   <Panel>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.2 139.69" className="w-full fill-current text-green-300">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.2 139.69" className="w-full h-64 fill-current text-green-300">
       <g className="text-blue-300">
         <rect width="16.07" height="16.07"/>
         <rect x="21.43" width="16.07" height="16.07"/>
@@ -826,7 +826,7 @@ For instance, consider the Olympic Rings, which also display good _similarity_ a
 
 <figure>
 <Panel>
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 960 435">
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 960 435" className="h-36 w-full mx-auto">
     <path class="text-blue-500 fill-current" d="M297.73,176l-.21,1.19a149,149,0,0,1-41.45,78.87L256,256a150.49,150.49,0,0,1-53.39,34.44c-.08-1.81-.13-3.63-.13-5.46A112.22,112.22,0,0,1,206.3,256,120.6,120.6,0,0,0,265,184.19l.06,0A120.57,120.57,0,0,0,270,150a123.19,123.19,0,0,0-1-15.66h0a120,120,0,0,0-238,0A120.8,120.8,0,0,0,30,150,120,120,0,0,0,141.76,269.71q4.08.29,8.24.29t8.24-.29c-.48,5-.74,10.13-.74,15.29q0,7.47.7,14.77-4.08.23-8.2.23t-8.2-.23a148.75,148.75,0,0,1-44.43-9.31A150,150,0,0,1,1.57,128.37C12.08,55.87,74.64,0,150,0A149.53,149.53,0,0,1,256,44l.05,0A149,149,0,0,1,297,120q.84,4.16,1.44,8.36a151.86,151.86,0,0,1-.32,45.4C298,174.51,297.86,175.26,297.73,176Z"/>
     <path class="text-black fill-current dark:text-white" d="M488.24,269.71c-.48,5-.74,10.13-.74,15.29q0,7.47.7,14.77-4.08.23-8.2.23t-8.2-.23a148.75,148.75,0,0,1-44.43-9.31A150.49,150.49,0,0,1,374,256,153.24,153.24,0,0,1,360,240a149.31,149.31,0,0,1-28.15-66.2A111.71,111.71,0,0,1,365,184.19a120.09,120.09,0,0,0,106.79,85.52q4.08.29,8.24.29T488.24,269.71Zm139.89-95.95a151.86,151.86,0,0,0,.32-45.4q-.6-4.2-1.44-8.36a149,149,0,0,0-40.94-76.07L586,44A149.57,149.57,0,0,0,480,0C413,0,356.06,44.21,336.9,105A147.24,147.24,0,0,0,333,120q-.86,4.14-1.45,8.37a156.74,156.74,0,0,1,29.45,6,120,120,0,0,1,238,0h0A123.19,123.19,0,0,1,600,150a120.57,120.57,0,0,1-4.91,34.16l-.06,0A120.6,120.6,0,0,1,536.3,256,112.22,112.22,0,0,0,532.5,285c0,1.83,0,3.65.13,5.46A150.49,150.49,0,0,0,586,256l.05.05a149,149,0,0,0,41.45-78.87l.21-1.19C627.86,175.26,628,174.51,628.13,173.76Z"/>
     <path class="text-red-500 fill-current" d="M960,150c0,1.28,0,2.56,0,3.83,0,.18,0,.36,0,.54,0,1.11-.07,2.22-.13,3.32v.13a153.14,153.14,0,0,1-1.67,15.94c-.12.75-.27,1.5-.4,2.25l-.21,1.19a149,149,0,0,1-41.45,78.87L916,256a149.58,149.58,0,0,1-97.82,43.75q-4.08.23-8.2.23t-8.2-.23A149.58,149.58,0,0,1,704,256,153.24,153.24,0,0,1,690,240a149.31,149.31,0,0,1-28.15-66.2A111.71,111.71,0,0,1,695,184.19a120.09,120.09,0,0,0,106.79,85.52q4.08.29,8.24.29t8.24-.29A119.19,119.19,0,0,0,866.3,256,120.6,120.6,0,0,0,925,184.19a119.36,119.36,0,0,0,4.81-27.93v-.1c0-.88.08-1.76.1-2.65,0-.15,0-.3,0-.45,0-1,0-2,0-3.06s0-2.05,0-3.06c0-.15,0-.3,0-.45,0-.89-.05-1.77-.1-2.65v-.1q-.26-4.76-.86-9.4c-.05-.37-.11-.74-.16-1.11-.11-.81-.24-1.62-.36-2.42-.25-1.55-.53-3.09-.84-4.61v0A120,120,0,0,0,691,134.34a156.74,156.74,0,0,0-29.45-6q.6-4.23,1.45-8.37a149.9,149.9,0,0,1,3.88-15C686.06,44.21,743,0,810,0A149.57,149.57,0,0,1,916,44l.05,0a148.9,148.9,0,0,1,42.38,84.43q1,6.84,1.35,13.82v.13c.06,1.1.1,2.21.13,3.32,0,.18,0,.36,0,.54C960,147.44,960,148.72,960,150Z"/>
