--- a/src/topics/app-icons/index.mdx
+++ b/src/topics/app-icons/index.mdx
@@ -8,7 +8,7 @@ resources:
 
 For better or for worse, we make snap judgments on apps based on their icons. These are the first impression for users. Your app could be the most functional, wonderful version among a sea of imitators, but if it doesn't grab attention right away, it could be missed. Set the tone for your app with an effective, thoughtful app icon.
 
-Your icon doesn't have to be – and probably _shouldn't be – the same as your full logo. Instead, it is its own standalone branding tool that needs to function in different ways. Icons are viewed in multiple contexts, usually at rather small sizes. A full logo inserted in a square can be too complex to be readable and identifiable when small.
+Your icon doesn't have to be – and probably _shouldn't be – the same as your full logo. Instead, it is its own standalone branding tool that needs to function in different ways. Icons are viewed in multiple contexts, usually at rather small sizes. A full logo inserted in a square can be too complex to be readable and identifiable when small. Consider the way that the elements in your app icon are presented, too. Something with flat colors and no special effects can be interpreted as "minimal" or "clean", and something with gradients or shadows might be seen as more dynamic.
 
 Smashing Magazines' [Eye-Catching App Icon Design](https://www.smashingmagazine.com/2017/01/designing-better-app-icons/) article highlights 5 core aspects of effective app icons. You can read along or watch the talks in video format:
 
