Add resources on generated color schemes

--- a/src/topics/color-blindness/index.mdx
+++ b/src/topics/color-blindness/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Color Blindness
+topic: color
 resources:
   - title: "Stop Designing For Only 85% Of Users: Nailing Accessibility In Design"
     link: https://www.smashingmagazine.com/2017/10/nailing-accessibility-design/
