Update gestalt docs

--- a/src/topics/gestalt-theory/index.mdx
+++ b/src/topics/gestalt-theory/index.mdx
@@ -567,12 +567,19 @@ Nearby objects are perceptually grouped together. Space between objects (and gro
 
 Some old-school interpretations place this within the realm of Proximity – newer laws, including this one, were added to gestalt theory later on. _Common Region_ uses boundaries such as background colors or borders to help separate and group content. These boundaries create "containers" or "blocks" for your content and are heavily used in interface design.
 
-Common Region is helpful when white space alone isn't enough to keep content separated, but too many harsh boundaries can make a design look cluttered. Worse, users might reach the end of a region and think that they've reached the end of the page or screen.
-
 <figure>
   <Img src="./serious-eats.png" alt="Screenshot of Serious Eats homepage showing articles grouped in cards" />
   <figcaption>
     The <Link to="https://www.seriouseats.com/">Serious Eats</Link> site has many articles and recipes laid out in content cards. These are one of the easiest ways to create a relationship between an image and text as well as separate individual articles from each other. This is slightly different from the Spotify proximity example, as the descriptions here are contained within blocks that have a background color separating them from the page.
+  </figcaption>
+</figure>
+
+Common Region is helpful when white space alone isn't enough to keep content separated, but too many harsh boundaries can make a design look cluttered. Worse, users might reach the end of a region and think that they've reached the end of the page or screen. Design elements can inform the user that there is still content to discover.
+
+<figure>
+  <Img src="./stripe.png" alt="Screenshot of Stripe's website showing diagonal sections" />
+  <figcaption>
+    The <Link to="https://www.stripe.com/">Stripe</Link> website has occasional diagonal edges on its common regions. When you scroll down the page and think you may have reached the bottom, seeing one of the diagonal corners peeking out of the screen signals that you should keep scrolling.
   </figcaption>
 </figure>
 
@@ -816,7 +823,14 @@ This one is huge on mobile! We can take advantage of horizontal scrolling to sho
 
 ### Common Fate
 
-When elements are moving towards the same direction, we perceive them to be related.
+When elements are moving towards the same direction, we perceive them to be related. Another very similar related principle is _Parallelism_, when elements are not only moving together but are parallel as well.
+
+<figure>
+  <Img src="./google-trends.png" alt="Trend charts showing pho and ramen searches increasing, while soba searches stay relatively steady" />
+  <figcaption>
+    On <Link to="https://trends.google.com/trends/explore?date=all&geo=US&q=%2Fm%2F02y17j,%2Fm%2F09gms,%2Fm%2F012y1_">Google Trends</Link>, searches from 2004-present have steadily increased for "pho" and "ramen" but stayed relatively stable for the "soba" search term. Though all chart lines are moving horizontally and share a common fate, we might also consider "pho" and "ramen" to be more related to each other than to "soba" because their chart lines look more similar (and they both became much trendier).
+  </figcaption>
+</figure>
 
 ### Prägnanz (Good Form)
 
