Replace links with buttons

--- a/src/topics/generating-color-schemes/index.mdx
+++ b/src/topics/generating-color-schemes/index.mdx
@@ -32,7 +32,7 @@ This builder is especially handy for web or mobile developers! After you set the
   </figcaption>
 </figure>
 
-[Try It](http://mcg.mbitson.com/#!?mcgpalette0=%23124369&mcgpalette1=%23d8c430&mcgpalette2=%2326a69a&mcgpalette3=%23d9872a&themename=Sample%20Theme)
+<Button to="http://mcg.mbitson.com/#!?mcgpalette0=%23124369&mcgpalette1=%23d8c430&mcgpalette2=%2326a69a&mcgpalette3=%23d9872a&themename=Sample%20Theme">Try Material Generator</Button>
 
 ### Eric Meyer's Color Blender
 
@@ -45,4 +45,4 @@ Many other color blenders and generators use a mix of well-tuned algorithms to c
   </figcaption>
 </figure>
 
-[Try It](https://meyerweb.com/eric/tools/color-blend/#CC66FF:3366FF:5:hex)
+<Button to="https://meyerweb.com/eric/tools/color-blend/#CC66FF:3366FF:5:hex">Try Color Blender</Button>
