Add form examples

--- a/src/topics/forms/index.mdx
+++ b/src/topics/forms/index.mdx
@@ -41,7 +41,15 @@ A label is typically used to, well, label the type of data for a specific input.
   <p><strong>A stand-alone checkbox </strong> is used for a single option that the user can turn on or off.</p>
 </Blockquote>
 
-There are a few other reasons why you might consider using radio buttons. [Nielsen Norman Group](https://www.nngroup.com/articles/checkboxes-vs-radio-buttons) recommends that "if possible, use radio buttons rather than drop-down menus. Radio buttons have lower cognitive load because they make all options permanently visible so that users can easily compare them." This is not recommended for long drop-down menus, such as a list of state abbreviations.
+There are a few other reasons why you might consider using radio buttons. [Nielsen Norman Group](https://www.nngroup.com/articles/checkboxes-vs-radio-buttons) recommends that "if possible, use radio buttons rather than drop-down menus. Radio buttons have lower cognitive load because they make all options permanently visible so that users can easily compare them."
+
+Of course, there are times when radio buttons aren't recommended! Sliders are more appropriate for interfaces like this volume control panel and drop-down menus are more appropriate for long lists, such as a list of state abbreviations.
+
+https://www.instagram.com/p/B2L_zCYA27Z/
+
+Long drop-downs can be overwhelming to look at _and_ difficult to use if information is not well-organized. In this example with country codes, a search box would have been extremely helpful for users:
+
+https://www.instagram.com/p/CJjaACigXzN/
 
 ## Tips for Friendlier Forms
 
