Fix layout on mobile

--- a/src/topics/choosing-fonts/index.mdx
+++ b/src/topics/choosing-fonts/index.mdx
@@ -31,7 +31,9 @@ _Accent fonts_ are used like spices; just a little bit can go a long way. Since 
 
 A typeface (or font family) can contain multiple individual styles, each of which is called a font. This gets confusing, as others might refer to a font as the whole set. Pedantics aside, the distinction is actually important here since typefaces with multiple fonts are more flexible to work with than single fonts.
 
-For headlines and as accents, you can potentially get away with a single style. For body fonts, look for at least a standard weight, standard weight in an italic style, and a bolder weight.
+**For headlines and as accents**, you can potentially get away with a single style.
+
+**For body fonts**, look for at least a standard weight, standard weight in an italic style, and a bolder weight.
 
 ### Superfamilies
 
@@ -39,9 +41,9 @@ _Superfamilies_ are large font families that might contain multiple styles, weig
 
 Choosing a font from a superfamily increases typographic possibilities because the styles are all complementary. Many of these superfamilies are used in editorial contexts. The variety of styles and weights is useful when text needs to be fine-tuned for readability in everything from the smallest of captions to huge headings.
 
-<FullWidthContainer>
+<FullWidthContainer className="my-6">
 
-  <div className="container mx-auto my-12 grid md:grid-cols-2 gap-12">
+  <div className="container mx-auto px-6 grid md:grid-cols-2 gap-12">
 
 <figure>
   <Panel fullHeight={false}>
@@ -78,7 +80,9 @@ Choosing a font from a superfamily increases typographic possibilities because t
 
 <figure>
 
+  <div>
   <Img src="./Scala_&_Scala_Sans_sample.png" alt="Scala and Scala Sans Sample" />
+  </div>
 
   <License
     type="cc"
