Add credit for icons

--- a/src/topics/icons-for-navigation/index.mdx
+++ b/src/topics/icons-for-navigation/index.mdx
@@ -94,7 +94,7 @@ This can be extra-confusing when different icons can mean the same thing:
   </p>
 </Blockquote>
 
-For example, the icons in each set represent the same concept or idea. Their art styles and even the fundamental shapes represented can vary, but somehow the user has to decode the design and its intent. Try guessing what they represent before reading the caption!
+For example, the icons in each set represent the same concept or idea. Their art styles and even the fundamental shapes represented can vary, but somehow the user has to decode the design and its intent. Try guessing what they represent before reading the caption! All icons were sourced with permission from [FlatIcon](https://www.flaticon.com/).
 
 <figure>
   <Panel>
@@ -130,6 +130,17 @@ For example, the icons in each set represent the same concept or idea. Their art
   <figcaption>
     These icons all represent the concept "logout". The arrow tends to face to the right, but sometimes to the left or facing down. The top-left example is very close to the Apple "share" icon rotated sideways, and the thin arrow coming out of 2 panels could also imply sharing a file from a folder. "Logout" and "shut down" aren't common together on a website, but they're both used on operating systems and some of these icons could appear to perform either task.
   </figcaption>
+
+  <License
+    type="copyright"
+    link="https://www.flaticon.com/"
+    mediaType="Icons"
+    authors={[
+      {
+        name: 'FlatIcon'
+      },
+    ]}
+  />
 </figure>
 
 ## Tips for Successful Icon Navigation
